--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -15,32 +15,55 @@
 	}
 	&-bio {
 		width: 75%;
-		margin-bottom: 30px;
+		margin-bottom: 40px;
 		text-align: center;
 		.text-secondary {
-			padding-bottom: 1rem;
-			font-size: 1.8rem;
+			padding-bottom: 1.8rem;
+			font-size: 2rem;
 		}
 		p {
 			font-size: 1.2rem;
 		}
 	}
-	.activities {
-		width: 60vw;
-		margin: 2rem auto 0;
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-gap: 2rem;
+	&-me-info {
+		width: 75%;
+		margin: 2.4rem auto;
+		display: flex;
+		justify-content: space-around;
 
-		&-school {
+		// gap: 3rem;
+
+		.activities {
+			width: 50%;
+			display: grid;
+			grid-template-columns: 1fr;
+			grid-gap: 2rem;
+
+			&-school {
+				background: linear-gradient(
+					to left,
+					rgba($primary-color, 1),
+					rgba($secondary-color, 0.16)
+				);
+				padding: 0.5rem;
+				border-bottom: 5px solid $secondary-color;
+				border-radius: 5px;
+			}
+		}
+		.interests {
+			list-style: none;
+			display: flex;
+			flex-flow: column wrap;
+			justify-content: space-between;
+			padding: 0.8rem;
 			background: linear-gradient(
-				to left,
+				to right,
 				rgba($primary-color, 1),
-				rgba($secondary-color, 0.1)
+				rgba($secondary-color, 0.16)
 			);
-			padding: 0.5rem;
 			border-bottom: 5px solid $secondary-color;
 			border-radius: 5px;
+			font-weight: 400;
 		}
 	}
 }
