--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "menu";
 @import "about";
 @import "projects";
+@import "contact";
 body {
 	background: $primary-color;
 	color: set-text-color($primary-color);
