--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,10 @@
 @import "config";
 @import "home";
 @import "menu";
+@import "contact";
 @import "about";
 @import "projects";
-@import "contact";
+@import "responsive";
 body {
 	background: $primary-color;
 	color: set-text-color($primary-color);
