--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -14,7 +14,7 @@
 		gap: 20px;
 	}
 	&-bio {
-		width: 75%;
+		width: 70%;
 		margin-bottom: 40px;
 		text-align: center;
 		.text-secondary {
@@ -26,15 +26,17 @@
 		}
 	}
 	&-me-info {
-		width: 75%;
+		width: 70%;
 		margin: 2.4rem auto;
 		display: flex;
+		flex-flow: row wrap;
+		gap: 2rem;
 		justify-content: space-around;
 
 		// gap: 3rem;
 
 		.activities {
-			width: 50%;
+			// width: 50%;
 			display: grid;
 			grid-template-columns: 1fr;
 			grid-gap: 2rem;
@@ -61,6 +63,7 @@
 			display: flex;
 			flex-flow: column wrap;
 			justify-content: space-around;
+			gap: 4px;
 			padding: 0.8rem;
 			background: linear-gradient(
 				to right,
@@ -72,4 +75,11 @@
 			font-weight: 400;
 		}
 	}
+	.social-icons {
+		display: flex;
+		flex-direction: column;
+	}
+}
+side-footer {
+	transform: rotate(90deg) translate(-3rem, -5rem);
 }
