fixing img issue

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -5,7 +5,7 @@
 		height: 55vh;
 		width: 100%;
 		background: linear-gradient(to right, rgba($primary-color, 0.3), rgba($primary-color, 0.4)),
-			url("../img/DSCF39821113.JPG") center center;
+			url("../img/DSCF39821113.jpg") center center;
 		background-size: cover;
 		display: flex;
 		flex-flow: column wrap;
